push paket dari farel
